# llm-community

./: CMakeLists.txt  README.md  report1.nsys-rep
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp
common/: CMakeLists.txt  checks.cpp  checks.hpp  multigpu.hpp  print.cpp  print.hpp  timing.cpp  timing.hpp
docs/: GLOSSARY.md  HARDWARE.md
lesson01-gpu-copy/: CMakeLists.txt  README.md  gpu_copy.cu
lesson02-peer-copy/: CMakeLists.txt  README.md  peer_copy.cu
lesson03-broadcast/: CMakeLists.txt  README.md  broadcast.cu
lesson04-allgather/: CMakeLists.txt  README.md  allgather.cu
lesson05-reduce/: CMakeLists.txt  README.md  reduce.cu
lesson06-reduce-scatter/: CMakeLists.txt  README.md  reduce_scatter.cu
lesson07-ring-allreduce/: CMakeLists.txt  README.md  ring_allreduce.cu
lesson08-alltoall/: CMakeLists.txt  README.md  alltoall.cu
lesson09-ring-buffer/: CMakeLists.txt  README.md  ring_buffer.cu
lesson10-streams/: CMakeLists.txt  README.md  streams.cu
lesson11-events/: CMakeLists.txt  README.md  events.cu
lesson12-nvshmem-basics/: CMakeLists.txt  README.md  nvshmem_basics.cu
lesson13-nvshmem-ring-buffer/: CMakeLists.txt  README.md  nvshmem_ring_buffer.cu
lesson14-producer-consumer/: CMakeLists.txt  README.md  producer_consumer.cu
lesson15-token-routing/: CMakeLists.txt  README.md  token_routing.cu
lesson16-moe-dispatch/: CMakeLists.txt  README.md  moe_dispatch.cu
lesson17-mini-deepep/: CMakeLists.txt  README.md  mini_deepep.cu  mini_deepep_optimized.cu
lesson18-reading-deepep/: NO_CMAKE.txt  README.md
lesson19-optimizing/: CMakeLists.txt  README.md  optimizing.cu
lesson20-deepep-analysis/: NO_CMAKE.txt  README.md
scripts/: bootstrap.sh  env.sh
