# Lesson 14 — producer/consumer with flag signaling. (NVSHMEM discovery)
find_package(NVSHMEM QUIET HINTS "${NVSHMEM_DIR}" ENV NVSHMEM_DIR)
set(_libs "")
set(_ok FALSE)
if(TARGET NVSHMEM::nvshmem)
    set(_libs NVSHMEM::nvshmem)
    set(_ok TRUE)
elseif(TARGET nvshmem::nvshmem_host)
    set(_libs nvshmem::nvshmem_host)
    if(TARGET nvshmem::nvshmem_device)
        list(APPEND _libs nvshmem::nvshmem_device)
    endif()
    set(_ok TRUE)
elseif(DEFINED NVSHMEM_DIR)
    find_library(NVSHMEM_LIB nvshmem PATHS "${NVSHMEM_DIR}/lib")
    if(NVSHMEM_LIB)
        set(_libs ${NVSHMEM_LIB})
        set(_ok TRUE)
        set(NVSHMEM_INCLUDE_DIR "${NVSHMEM_DIR}/include")
    endif()
endif()
if(_ok)
    add_executable(producer_consumer producer_consumer.cu)
    target_link_libraries(producer_consumer PRIVATE lab_common ${_libs})
    if(DEFINED NVSHMEM_INCLUDE_DIR)
        target_include_directories(producer_consumer PRIVATE ${NVSHMEM_INCLUDE_DIR})
    endif()
    set_target_properties(producer_consumer PROPERTIES
        CUDA_SEPARABLE_COMPILATION ON
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lesson14-producer-consumer)
    message(STATUS "  lesson14-producer-consumer: enabled")
else()
    message(STATUS "  lesson14-producer-consumer: SKIPPED (NVSHMEM not found)")
endif()
