# Lesson 17 — mini DeepEP dispatch. (NVSHMEM discovery)
find_package(NVSHMEM QUIET HINTS "${NVSHMEM_DIR}" ENV NVSHMEM_DIR)
set(_libs "")
set(_ok FALSE)
if(TARGET NVSHMEM::nvshmem)
    set(_libs NVSHMEM::nvshmem)
    set(_ok TRUE)
elseif(TARGET nvshmem::nvshmem_host)
    set(_libs nvshmem::nvshmem_host)
    if(TARGET nvshmem::nvshmem_device)
        list(APPEND _libs nvshmem::nvshmem_device)
    endif()
    set(_ok TRUE)
elseif(DEFINED NVSHMEM_DIR)
    find_library(NVSHMEM_LIB nvshmem PATHS "${NVSHMEM_DIR}/lib")
    if(NVSHMEM_LIB)
        set(_libs ${NVSHMEM_LIB})
        set(_ok TRUE)
        set(NVSHMEM_INCLUDE_DIR "${NVSHMEM_DIR}/include")
    endif()
endif()
if(_ok)
    add_executable(mini_deepep mini_deepep.cu)
    target_link_libraries(mini_deepep PRIVATE lab_common ${_libs})
    if(DEFINED NVSHMEM_INCLUDE_DIR)
        target_include_directories(mini_deepep PRIVATE ${NVSHMEM_INCLUDE_DIR})
    endif()
    set_target_properties(mini_deepep PROPERTIES
        CUDA_SEPARABLE_COMPILATION ON
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lesson17-mini-deepep)
    message(STATUS "  lesson17-mini-deepep: enabled")
else()
    message(STATUS "  lesson17-mini-deepep: SKIPPED (NVSHMEM not found)")
endif()
